gapping fix

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1930,7 +1930,7 @@ p.subtableHeading {
 }
 
 .inventory-management-details-page-content {
-    padding-right: 56px;
+    padding-right: 36px;
 }
 
 // inventory management details end
